--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcVyjwXh2Rs8MvJMQHuXud",
+      "authorship_tag": "ABX9TyPtvKxQHWDNTYyylZF/hqxP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,15 +36,118 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MApI_TO7DJhy",
-        "outputId": "f50e924f-3ab6-41f0-b416-395720cf7590"
+        "outputId": "a4c26885-8194-4be8-fc37-aab80962b2cc"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Bio data"
+      ],
+      "metadata": {
+        "id": "5SSFzZtREyZ0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# I making bio data#\n",
+        "print(\"             BIODATA    \")\n",
+        "print(\"\")\n",
+        "print(\"Name           : Ankit kumar\")\n",
+        "print(\"Phone number   : 7888304156\")\n",
+        "print(\"Email add      : ankitkumar788830@gamil.com\")\n",
+        "print(\"Father Name    : Ashok choudhry\")\n",
+        "print(\"DOB            : 10/07/2004\")\n",
+        "print(\"Age            : 21 \")\n",
+        "\n",
+        "print(\"Qulification   : Bca\")\n",
+        "print(\"Langauge       : Hindi English\")\n",
+        "print(\"Marrital Status: Unmarried\")\n",
+        "print(\"gender         : Male\")\n",
+        "print(\"Religion       : Hindu\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m5qOn1YcElqB",
+        "outputId": "b155d5cb-bed8-4e94-90b6-28d4e735d998"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "             BIODATA    \n",
+            "\n",
+            "Name           : Ankit kumar\n",
+            "Phone number   : 7888304156\n",
+            "Email add      : ankitkumar788830@gamil.com\n",
+            "Father Name    : Ashok choudhry\n",
+            "DOB            : 10/07/2004\n",
+            "Age            : 21 \n",
+            "Qulification   : Bca\n",
+            "Langauge       : Hindi English\n",
+            "Marrital Status: Unmarried\n",
+            "gender         : Male\n",
+            "Religion       : Hindu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name =\"Ankit kumar\"\n",
+        "print(\"Name :\",name)\n",
+        "ph= 788304156\n",
+        "print(\"Phone No :\",ph)\n",
+        "gmail= \"ankitkumar788830@gamil.com\"\n",
+        "print(\"Email add :\",gmail)\n",
+        "father =\"Ashok choudhry\"\n",
+        "print(\"Father name\",father)\n",
+        "dob= \"10/07/2004\"\n",
+        "print(\"DOB :\",dob)\n",
+        "age= 21\n",
+        "print(\"Age :\",age)\n",
+        "qly= \"bca\"\n",
+        "print(\"qulification\",qly)\n",
+        "lang= \"Hindi English\"\n",
+        "print(\"Language :\",lang)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TxVsN-gyK35z",
+        "outputId": "b196c3a1-83c6-4556-c890-db9c93ac3e5d"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name : Ankit kumar\n",
+            "Phone No : 788304156\n",
+            "Email add : ankitkumar788830@gamil.com\n",
+            "Father name Ashok choudhry\n",
+            "DOB : 10/07/2004\n",
+            "Age : 21\n",
+            "qulification bca\n",
+            "Language : Hindi English\n"
           ]
         }
       ]
