--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtvKxQHWDNTYyylZF/hqxP",
+      "authorship_tag": "ABX9TyOesWLhf7y+9ll5ZG1Qt4HN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "id": "MApI_TO7DJhy",
         "outputId": "a4c26885-8194-4be8-fc37-aab80962b2cc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +84,7 @@
         "id": "m5qOn1YcElqB",
         "outputId": "b155d5cb-bed8-4e94-90b6-28d4e735d998"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "age= 21\n",
         "print(\"Age :\",age)\n",
         "qly= \"bca\"\n",
-        "print(\"qulification\",qly)\n",
+        "print(\"qulification :\",qly)\n",
         "lang= \"Hindi English\"\n",
         "print(\"Language :\",lang)"
       ],
@@ -134,7 +134,7 @@
         "id": "TxVsN-gyK35z",
         "outputId": "b196c3a1-83c6-4556-c890-db9c93ac3e5d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,6 +148,104 @@
             "Age : 21\n",
             "qulification bca\n",
             "Language : Hindi English\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item1=\"burger\"\n",
+        "price_of_item1=80\n",
+        "item2=\"pizza\"\n",
+        "price_of_item2=150\n",
+        "item3=\"wrap\"\n",
+        "price_of_item3=120\n",
+        "item4=\"friese\"\n",
+        "price_of_item4=130\n",
+        "item5=\"moms\"\n",
+        "price_of_item5=90\n",
+        "print(item1)\n",
+        "print(price_of_item1)\n",
+        "total=price_of_item1+price_of_item2+price_of_item3+price_of_item4+price_of_item5\n",
+        "print(\"TOTAL_BILL\",total)\n",
+        "discount=10\n",
+        "total_dis=total*discount/100\n",
+        "print(\"TOTAL discount\",total_dis)\n",
+        "print(\"Pay_bill\",total-total_dis)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-dj4uI6JNqoh",
+        "outputId": "df55240d-5513-44e4-849b-564f52bbe87e"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "burger\n",
+            "80\n",
+            "TOTAL_BILL 570\n",
+            "TOTAL discount 57.0\n",
+            "Pay_bill 513.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_number=5\n",
+        "second_number=10\n",
+        "print(first_number+second_number)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-W7QDDW7KEta",
+        "outputId": "3e464a31-e1f0-4df2-b7d6-122566efc60c"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=500\n",
+        "b=100\n",
+        "sum=a+b\n",
+        "sub=a-b\n",
+        "mul=a*b\n",
+        "div=a/b\n",
+        "print(sum,sub,mul,div)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0M2URar5L2IB",
+        "outputId": "dcdd6c62-c9ce-4ee9-c3ee-7dc7bf4944c6"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "600 400 50000 5.0\n"
           ]
         }
       ]
