--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOesWLhf7y+9ll5ZG1Qt4HN",
+      "authorship_tag": "ABX9TyOqMgE1YGfXmT5vIwos8J37",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,7 +181,7 @@
         "id": "-dj4uI6JNqoh",
         "outputId": "df55240d-5513-44e4-849b-564f52bbe87e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,6 +192,66 @@
             "TOTAL_BILL 570\n",
             "TOTAL discount 57.0\n",
             "Pay_bill 513.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item1=\"burger\"\n",
+        "price_of_item1=80\n",
+        "discount_item1=10\n",
+        "total_discount_item1=price_of_item1*discount_item1/100\n",
+        "final_prize_of_item1=price_of_item1-total_discount_item1\n",
+        "print(\"Final prize of burger :\",final_prize_of_item1)\n",
+        "\n",
+        "item2=\"pizza\"\n",
+        "price_of_item2=150\n",
+        "discount_item2=9\n",
+        "total_discount_item2=price_of_item2*discount_item2/100\n",
+        "final_prize_of_item2=price_of_item2-total_discount_item2\n",
+        "print(\"Final prize of pizza :\",final_prize_of_item2)\n",
+        "\n",
+        "item3=\"wrap\"\n",
+        "price_of_item3=120\n",
+        "discount_item3=9\n",
+        "total_discount_item3=price_of_item3*discount_item3/100\n",
+        "final_prize_of_item3=price_of_item3-total_discount_item3\n",
+        "print(\"Final prize of wrap :\",final_prize_of_item3)\n",
+        "\n",
+        "item4=\"fries\"\n",
+        "price_of_item4=130\n",
+        "discount_item4=9\n",
+        "total_discount_item4=price_of_item4*discount_item4/100\n",
+        "final_prize_of_item4=price_of_item4-total_discount_item4\n",
+        "print(\"Final prize of fries : \",final_prize_of_item4)\n",
+        "\n",
+        "total_discount=total_discount_item1+total_discount_item2+total_discount_item3+total_discount_item4\n",
+        "final_prize=final_prize_of_item1+final_prize_of_item2+final_prize_of_item3+final_prize_of_item4\n",
+        "\n",
+        "print(\"Total discount :\",total_discount)\n",
+        "print(\"Payable bill :\",final_prize)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VCJR6EHP6jF-",
+        "outputId": "506fef66-1708-466f-ce0a-f2cc5bdbafda"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final prize of burger : 72.0\n",
+            "Final prize of pizza : 136.5\n",
+            "Final prize of wrap : 109.2\n",
+            "Final prize of fries :  118.3\n",
+            "Total discount : 44.0\n",
+            "Payable bill : 436.0\n"
           ]
         }
       ]
@@ -210,7 +270,7 @@
         "id": "-W7QDDW7KEta",
         "outputId": "3e464a31-e1f0-4df2-b7d6-122566efc60c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +299,7 @@
         "id": "0M2URar5L2IB",
         "outputId": "dcdd6c62-c9ce-4ee9-c3ee-7dc7bf4944c6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
