--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPobq0RYC2XtM04AO72UZIq",
+      "authorship_tag": "ABX9TyMsJa2JAXn51QCQgLj3KHKO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,11 +94,11 @@
         "print(\"Payable bill :\",final_prize)\n"
       ],
       "metadata": {
-        "id": "E2rsdJ0BTHiX",
-        "outputId": "ecee7851-089d-4125-c2e6-966454f81703",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E2rsdJ0BTHiX",
+        "outputId": "ecee7851-089d-4125-c2e6-966454f81703"
       },
       "execution_count": 1,
       "outputs": [
@@ -129,11 +129,11 @@
         "print(ph)"
       ],
       "metadata": {
-        "id": "gm297erQWLr5",
-        "outputId": "45ff87ea-938a-4bb6-eb37-1507e1080b7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gm297erQWLr5",
+        "outputId": "45ff87ea-938a-4bb6-eb37-1507e1080b7f"
       },
       "execution_count": 4,
       "outputs": [
@@ -158,11 +158,11 @@
         "print(item2)"
       ],
       "metadata": {
-        "id": "igUkj_PaX5MF",
-        "outputId": "ea161b8b-173b-4a2a-8e2d-80711caa0c90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "igUkj_PaX5MF",
+        "outputId": "ea161b8b-173b-4a2a-8e2d-80711caa0c90"
       },
       "execution_count": 5,
       "outputs": [
@@ -181,7 +181,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(input(\"Enter your first number :\"))\n",
+        "8a=int(input(\"Enter your first number :\"))\n",
         "\n",
         "b=int(input(\"Enter your second number :\"))\n",
         "\n",
@@ -193,33 +193,52 @@
         "\n"
       ],
       "metadata": {
-        "id": "NQ4oVBylYYwp",
-        "outputId": "58bf5952-fb81-444b-e9eb-eaa3ffee2e38",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 263
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NQ4oVBylYYwp",
+        "outputId": "70fe7514-444b-40c6-d9ad-f683b3ab204f"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Enter your first number :8\n",
-            "enter your operator/\n",
-            "Enter your second number :9\n"
+            "Enter your second number :5\n",
+            "Add two number : 13\n",
+            "sub tow number : 3\n",
+            "multiply two number : 40\n",
+            "divide tow number : 1.6\n"
           ]
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=int(input(\"enter your number :\"))\n",
+        "if num%2==0 :\n",
+        "  print(num,\" is even number\")\n",
+        "else:\n",
+        "  print(num,\" is odd number\")"
+      ],
+      "metadata": {
+        "id": "FQ8NqTjoeZeD",
+        "outputId": "ad679de3-9f73-4a5d-a870-1c25fb67f3dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1393321417.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter your second number :\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"enter your number :\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Add two number :\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sub tow number :\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter your number :9856449\n",
+            "9856449  is odd number\n"
           ]
         }
       ]
