--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsJa2JAXn51QCQgLj3KHKO",
+      "authorship_tag": "ABX9TyNf/xw0hChLaern4cmgWpWr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,216 +29,60 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"hello world\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MApI_TO7DJhy",
-        "outputId": "a4c26885-8194-4be8-fc37-aab80962b2cc"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello world\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "item1=\"burger\"\n",
-        "price_of_item1=80\n",
-        "discount_item1=10\n",
-        "total_discount_item1=price_of_item1*discount_item1/100\n",
-        "final_prize_of_item1=price_of_item1-total_discount_item1\n",
-        "print(\"Final prize of burger :\",final_prize_of_item1)\n",
+        "product1=\"earbuds\"\n",
+        "prize_of_product1=1500\n",
+        "product2=\"shoes\"\n",
+        "prize_of_product2=1800\n",
+        "product3=\"mobile back cover\"\n",
+        "prize_of_product3=400\n",
+        "product4=\"jens\"\n",
+        "prize_of_product4=1500\n",
+        "total_bill=prize_of_product1+prize_of_product2+prize_of_product3+prize_of_product4\n",
+        "print(\"TOTAL BILL :\",total_bill)\n",
+        "discount_of_item1=10\n",
+        "discountable_amount1=prize_of_product1*discount_of_item1/100\n",
+        "discount_of_item2=30\n",
+        "discountable_amount2=prize_of_product2*discount_of_item2/100\n",
+        "discount_of_item3=20\n",
+        "discountable_amount3=prize_of_product3*discount_of_item3/100\n",
+        "discount_of_item4=45\n",
+        "discountable_amount4=prize_of_product4*discount_of_item4/100\n",
+        "totaldis=discountable_amount1+discountable_amount2+discountable_amount3+discountable_amount4\n",
+        "print(\"TOTAL DISCOUNT :\",totaldis)\n",
+        "totalbill_with_dic=total_bill-totaldis\n",
+        "print(\"TOTAL BILL WITH DISCOUNT :\",totalbill_with_dic)\n",
+        "addition_disc=10\n",
+        "adition_dic=totalbill_with_dic*10/100\n",
+        "print(\"ADITIONAL DISCOUNT :\",adition_dic)\n",
+        "paybill=totalbill_with_dic-adition_dic\n",
+        "print(\"PAYABLE BILL :\", paybill)\n",
+        "name=input(\"Enter YOUR NAME :\")\n",
+        "ph=int(input(\"ENTER YOUR PHONE NUMBER :\",))\n",
+        "add=input(\"ENTER YOUR ADDRESS :\")\n",
         "\n",
-        "item2=\"pizza\"\n",
-        "price_of_item2=150\n",
-        "discount_item2=9\n",
-        "total_discount_item2=price_of_item2*discount_item2/100\n",
-        "final_prize_of_item2=price_of_item2-total_discount_item2\n",
-        "print(\"Final prize of pizza :\",final_prize_of_item2)\n",
-        "\n",
-        "item3=\"wrap\"\n",
-        "price_of_item3=120\n",
-        "discount_item3=9\n",
-        "total_discount_item3=price_of_item3*discount_item3/100\n",
-        "final_prize_of_item3=price_of_item3-total_discount_item3\n",
-        "print(\"Final prize of wrap :\",final_prize_of_item3)\n",
-        "\n",
-        "item4=\"fries\"\n",
-        "price_of_item4=130\n",
-        "discount_item4=9\n",
-        "total_discount_item4=price_of_item4*discount_item4/100\n",
-        "final_prize_of_item4=price_of_item4-total_discount_item4\n",
-        "print(\"Final prize of fries : \",final_prize_of_item4)\n",
-        "Enter_your_name=\"Ankit kumar\"\n",
-        "Enter_your_adress=\"186 daria chandigarh\"\n",
-        "Enter_mobile_no=7888304156\n",
-        "Enter_pin_code=160002\n",
-        "print(\"Custmer Name :\",Enter_your_name)\n",
-        "print(\"custmer adress :\",Enter_your_adress)\n",
-        "print(\"custmer phone no :\",Enter_mobile_no)\n",
-        "print(\"custmer pin code :\",Enter_pin_code)\n",
-        "total_discount=total_discount_item1+total_discount_item2+total_discount_item3+total_discount_item4\n",
-        "final_prize=final_prize_of_item1+final_prize_of_item2+final_prize_of_item3+final_prize_of_item4\n",
-        "\n",
-        "print(\"Total discount :\",total_discount)\n",
-        "print(\"Payable bill :\",final_prize)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E2rsdJ0BTHiX",
-        "outputId": "ecee7851-089d-4125-c2e6-966454f81703"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Final prize of burger : 72.0\n",
-            "Final prize of pizza : 136.5\n",
-            "Final prize of wrap : 109.2\n",
-            "Final prize of fries :  118.3\n",
-            "Custmer Name : Ankit kumar\n",
-            "custmer adress : 186 daria chandigarh\n",
-            "custmer phone no : 7888304156\n",
-            "custmer pin code : 160002\n",
-            "Total discount : 44.0\n",
-            "Payable bill : 436.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "item=input(\"enter your item :\")\n",
-        "print(item)\n",
-        "ph=int(input(\"enter your phone no:\"))\n",
-        "print(ph)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gm297erQWLr5",
-        "outputId": "45ff87ea-938a-4bb6-eb37-1507e1080b7f"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter your item :burger\n",
-            "burger\n",
-            "enter your phone no:7888304156\n",
-            "7888304156\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "item1=input(\"Enter your item :\")\n",
-        "print(item1)\n",
-        "item2=input(\"Enter your item:\")\n",
-        "print(item2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "igUkj_PaX5MF",
-        "outputId": "ea161b8b-173b-4a2a-8e2d-80711caa0c90"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter your item :burger\n",
-            "burger\n",
-            "Enter your item:pizza\n",
-            "pizza\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "8a=int(input(\"Enter your first number :\"))\n",
-        "\n",
-        "b=int(input(\"Enter your second number :\"))\n",
-        "\n",
-        "\n",
-        "print(\"Add two number :\",a+b)\n",
-        "print(\"sub tow number :\",a-b)\n",
-        "print(\"multiply two number :\",a*b)\n",
-        "print(\"divide tow number :\",a/b)\n",
         "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "NQ4oVBylYYwp",
-        "outputId": "70fe7514-444b-40c6-d9ad-f683b3ab204f"
+        "id": "MApI_TO7DJhy",
+        "outputId": "c666c431-0570-4083-8166-68200101a0f6"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
-          "text": [
-            "Enter your first number :8\n",
-            "Enter your second number :5\n",
-            "Add two number : 13\n",
-            "sub tow number : 3\n",
-            "multiply two number : 40\n",
-            "divide tow number : 1.6\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "num=int(input(\"enter your number :\"))\n",
-        "if num%2==0 :\n",
-        "  print(num,\" is even number\")\n",
-        "else:\n",
-        "  print(num,\" is odd number\")"
-      ],
-      "metadata": {
-        "id": "FQ8NqTjoeZeD",
-        "outputId": "ad679de3-9f73-4a5d-a870-1c25fb67f3dc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "enter your number :9856449\n",
-            "9856449  is odd number\n"
+            "TOTAL BILL : 5200\n",
+            "TOTAL DISCOUNT : 1445.0\n",
+            "TOTAL BILL WITH DISCOUNT : 3755.0\n",
+            "ADITIONAL DISCOUNT : 375.5\n",
+            "PAYABLE BILL : 3379.5\n",
+            "Enter YOUR NAME :ANKIT KUMAR\n",
+            "ENTER YOUR PHONE NUMBER :7888304156\n",
+            "ENTER YOUR ADDRESS186 N DARIA CHANDIGARH\n"
           ]
         }
       ]
