--- a/Copy_of_untitled0.ipynb
+++ b/Copy_of_untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdeKhFcRrYy4clyY+LSTRY",
+      "authorship_tag": "ABX9TyO4v6xQwFcqw3lYwgLIEu/5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,6 +79,72 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal_amount=int(input(\"enter your amount:\"))\n",
+        "rate=10\n",
+        "ente_month_name=input(\"enter your month name:\")\n",
+        "\n",
+        "enter_month=int(input(\"enter your month:\"))\n",
+        "enter_days=int(input(\"enter your days:\"))\n",
+        "enter_year=int(input(\"enter your year:\"))\n",
+        "if ente_month_name==\"jan\" or ente_month_name==\"mar\" or ente_month_name==\"may\" or ente_month_name==\"july\" or ente_month_name==\"aug\" or ente_month_name==\"oct\" or ente_month_name==\"dec\":\n",
+        "  days_in_month=31\n",
+        "elif ente_month_name==\"apr\" or ente_month_name==\"jun\" or ente_month_name==\"sep\" or ente_month_name==\"nov\":\n",
+        "  days_in_month=30\n",
+        "else:\n",
+        "  if enter_year%4==0 and enter_year%100!=0 or enter_year%400==0:\n",
+        "    days_in_month=29\n",
+        "    print(\" ITS A LEAP YEAR\")\n",
+        "\n",
+        "  else:\n",
+        "    days_in_month=28\n",
+        "    print(\"ITS NOT A LEAP YEAR\")\n",
+        "\n",
+        "\n",
+        "month=enter_days/days_in_month\n",
+        "total_time_period=month+enter_month\n",
+        "si=(principal_amount*rate*total_time_period)/100\n",
+        "print(si)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Rz5sKQWWnDr",
+        "outputId": "5a792c7c-555e-428c-998c-0348db7cd210"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter your amount:60000\n",
+            "enter your month name:mar\n",
+            "enter your month:8\n",
+            "enter your days:21\n",
+            "enter your year:2026\n",
+            "52064.516129032265\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prin"
+      ],
+      "metadata": {
+        "id": "A6LwiCf6SLOY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
