--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNf/xw0hChLaern4cmgWpWr",
+      "authorship_tag": "ABX9TyPk1f9IStyMqsFfIarqfWBD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,63 +29,324 @@
     {
       "cell_type": "code",
       "source": [
-        "product1=\"earbuds\"\n",
-        "prize_of_product1=1500\n",
-        "product2=\"shoes\"\n",
-        "prize_of_product2=1800\n",
-        "product3=\"mobile back cover\"\n",
-        "prize_of_product3=400\n",
-        "product4=\"jens\"\n",
-        "prize_of_product4=1500\n",
-        "total_bill=prize_of_product1+prize_of_product2+prize_of_product3+prize_of_product4\n",
-        "print(\"TOTAL BILL :\",total_bill)\n",
-        "discount_of_item1=10\n",
-        "discountable_amount1=prize_of_product1*discount_of_item1/100\n",
-        "discount_of_item2=30\n",
-        "discountable_amount2=prize_of_product2*discount_of_item2/100\n",
-        "discount_of_item3=20\n",
-        "discountable_amount3=prize_of_product3*discount_of_item3/100\n",
-        "discount_of_item4=45\n",
-        "discountable_amount4=prize_of_product4*discount_of_item4/100\n",
-        "totaldis=discountable_amount1+discountable_amount2+discountable_amount3+discountable_amount4\n",
-        "print(\"TOTAL DISCOUNT :\",totaldis)\n",
-        "totalbill_with_dic=total_bill-totaldis\n",
-        "print(\"TOTAL BILL WITH DISCOUNT :\",totalbill_with_dic)\n",
-        "addition_disc=10\n",
-        "adition_dic=totalbill_with_dic*10/100\n",
-        "print(\"ADITIONAL DISCOUNT :\",adition_dic)\n",
-        "paybill=totalbill_with_dic-adition_dic\n",
-        "print(\"PAYABLE BILL :\", paybill)\n",
-        "name=input(\"Enter YOUR NAME :\")\n",
-        "ph=int(input(\"ENTER YOUR PHONE NUMBER :\",))\n",
-        "add=input(\"ENTER YOUR ADDRESS :\")\n",
-        "\n",
-        "\n"
+        "print(\"hello world\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MApI_TO7DJhy",
-        "outputId": "c666c431-0570-4083-8166-68200101a0f6"
+        "outputId": "a4c26885-8194-4be8-fc37-aab80962b2cc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "TOTAL BILL : 5200\n",
-            "TOTAL DISCOUNT : 1445.0\n",
-            "TOTAL BILL WITH DISCOUNT : 3755.0\n",
-            "ADITIONAL DISCOUNT : 375.5\n",
-            "PAYABLE BILL : 3379.5\n",
-            "Enter YOUR NAME :ANKIT KUMAR\n",
-            "ENTER YOUR PHONE NUMBER :7888304156\n",
-            "ENTER YOUR ADDRESS186 N DARIA CHANDIGARH\n"
+            "hello world\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8dymazGwcwCo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=0\n",
+        "while n<=5:\n",
+        "  print(n)\n",
+        "  n+=1"
+      ],
+      "metadata": {
+        "id": "-jSdZOZrcFVe",
+        "outputId": "84670d13-c202-4adc-fec3-d9777dffd77d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=24568\n",
+        "while num>0:\n",
+        "  digit=num%10\n",
+        "  num=num//10\n",
+        "  print(digit)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "pogdhGYghDJ5",
+        "outputId": "5845cf14-64a3-4db9-a260-4c70b760a528",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=24568\n",
+        "rev=0\n",
+        "while num>0:\n",
+        "  rem=num%10\n",
+        "  rev=rev*10+rem\n",
+        "  num=num//10\n",
+        "\n",
+        "\n",
+        "print(rev)"
+      ],
+      "metadata": {
+        "id": "YZQB5X8Bjezl",
+        "outputId": "fdc9f597-adaf-4e67-c440-1b8cf08003a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "86542\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input(\"enter your numer\"))\n",
+        "b=int(input(\"enter your numer\"))\n",
+        "if a>b:\n",
+        "  smallest=b;\n",
+        "else:\n",
+        "  smallest=a;\n",
+        "for i in range(1,smallest +1):\n",
+        "  if(a%i==0) and (b%i==0):\n",
+        "    hcf=i;\n",
+        "print(hcf)\n",
+        "lcm=(a*b)/hcf\n",
+        "print(lcm)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dPqmPw1bVave",
+        "outputId": "f070b2c4-857a-4f95-87f4-f2eab4541898"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter your numer8\n",
+            "enter your numer81\n",
+            "1\n",
+            "648.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input(\"enter your numer\"))\n",
+        "b=int(input(\"enter your numer\"))\n",
+        "if a<b:\n",
+        "  smallest=b;\n",
+        "else:\n",
+        "  smallest=a;\n",
+        "for i in range(smallest,a*b+1):\n",
+        "  if(i%a==0) and (i%b==0):\n",
+        "    lcm=i\n",
+        "    break;\n",
+        "print(lcm)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mPJ598UNcHil",
+        "outputId": "0c22eee7-7a32-4a63-929e-3dddd4362796"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter your numer10\n",
+            "enter your numer20\n",
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_term=0\n",
+        "second_term=1\n",
+        "\n",
+        "\n",
+        "for i in range(3,13):\n",
+        " third_term=first_term+second_term\n",
+        " first_term=second_term\n",
+        " second_term=third_term\n",
+        "print(third_term)\n"
+      ],
+      "metadata": {
+        "id": "nJGgxOf2gayV",
+        "outputId": "5edf298e-934f-4ddb-b54e-d8a925d730e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "89\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "light1=\"red\"\n",
+        "light2=\"yellow\"\n",
+        "light3=\"green\"\n",
+        "dir1=\"south incoming\"\n",
+        "dir2=\"south outgoing\"\n",
+        "dir3=\"north incoming\"\n",
+        "dir4=\"north outgoing\"\n",
+        "dir5=\"east incoming\"\n",
+        "dir6=\"east outgoing\"\n",
+        "dir7=\"west incoming\"\n",
+        "dir8=\"west outgoing\"\n",
+        "if dir2==light1:\n",
+        "  print(\"stop\")\n",
+        "elif dir2==light2:\n",
+        "  print(\"ready\")\n",
+        "else dir3==light3:\n",
+        "  print(\"go\")"
+      ],
+      "metadata": {
+        "id": "1dAlQlc_kLB_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir1=\"south\"\n",
+        "dir2=\"south outgoing\"\n",
+        "dir3=\"north incoming\"\n",
+        "dir4=\"east\"\n",
+        "dir5=\"east incoming\"\n",
+        "dir6=\"east outgoing\"\n",
+        "dir7=\"west\"\n",
+        "dir8=\"west incoming\"\n",
+        "dir9=\"west outgoing\"\n",
+        "dir10=\"north\"\n",
+        "dir11=\"north incoming\"\n",
+        "dir12=\"north outgoing\"\n",
+        "light1=\"green\"\n",
+        "light2=\"yellow\"\n",
+        "light3=\"red\"\n",
+        "if dir1==light1:\n",
+        "  print(\"south outgoing\")\n",
+        "  print(\"north incoming\" )\n",
+        "elif dir1==light2:\n",
+        "  print(\"ready south outgoing\")\n",
+        "  print(\"ready north incoming\")\n",
+        "elif dir1==light3:\n",
+        "  print(\"stop south outgoing\")\n",
+        "  print(\"stop norht incoming\")\n",
+        "else:\n",
+        "  if dir4==light1:\n",
+        "    print(\"east outgoing\")\n",
+        "    print(\"east incoming\" )\n",
+        "  elif dir1==light2:\n",
+        "    print(\"east south outgoing\")\n",
+        "    print(\"east north incoming\")\n",
+        "  elif dir1==light3:\n",
+        "    print(\"east south outgoing\")\n",
+        "    print(\"east norht incoming\")\n",
+        "  else:\n",
+        "    if dir7==light1:\n",
+        "      print(\"south outgoing\")\n",
+        "      print(\"north incoming\" )\n",
+        "    elif dir1==light2:\n",
+        "      print(\"ready south outgoing\")\n",
+        "      print(\"ready north incoming\")\n",
+        "    elif dir1==light3:\n",
+        "      print(\"stop south outgoing\")\n",
+        "      print(\"stop norht incoming\")\n",
+        "    else:\n",
+        "      if dir10==light1:\n",
+        "        print(\"south outgoing\")\n",
+        "        print(\"north incoming\" )\n",
+        "      elif dir1==light2:\n",
+        "        print(\"ready south outgoing\")\n",
+        "        print(\"ready north incoming\")\n",
+        "      elif dir1==light3:\n",
+        "        print(\"stop south outgoing\")\n",
+        "        print(\"stop norht incoming\")\n",
+        "      else:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ap7J_qDuruV3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
